# memtomem-stm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml
docs/: bench_qa.md  caching.md  cli.md  compression.md  configuration.md  custom-integration.md  operations.md  pipeline.md  surfacing.md
notebooks/: 00_cli_and_mcp_hybrid.ipynb  01_quickstart_proxy_setup.ipynb  02_compression_and_selective.ipynb  03_memory_surfacing.ipynb  04_langchain_agent_integration.ipynb  05_observability_and_langfuse.ipynb  README.md  _build_notebooks.py  _helpers.py
signatures/v1/: cla.json
src/memtomem_stm/: __init__.py  config.py  server.py
src/memtomem_stm/cli/: proxy.py
src/memtomem_stm/observability/: tracing.py
src/memtomem_stm/proxy/: _fastmcp_compat.py  _locks.py  cache.py  compression.py  compression_feedback_store.py  config.py  manager.py  memory_ops.py  metrics.py  metrics_store.py  pending_store.py  privacy.py  progressive.py  progressive_reads.py  progressive_reads_store.py
src/memtomem_stm/surfacing/: config.py  engine.py  feedback.py  feedback_store.py  formatter.py  mcp_client.py  relevance.py
src/memtomem_stm/utils/: circuit_breaker.py  sqlite_tuning.py
tests/: _fake_memtomem_server.py  test_auto_index_background.py  test_bench_pipeline.py  test_bounded_locks.py  test_circuit_breaker.py  test_compression.py  test_compression_feedback.py  test_compression_ratio_guard.py  test_config_constraints.py  test_config_persistence.py  test_core_format_contract.py  test_cross_session_dedup.py  test_effectiveness.py  test_env_overrides.py  test_error_metrics.py  test_fastmcp_compat.py  test_feedback.py  test_information_loss.py  test_mcp_client_reconnect.py  test_memory_ops.py  test_metrics_store.py  test_observability.py  test_privacy.py  test_progressive.py  test_progressive_reads.py  test_proxy_error_paths.py  test_proxy_manager_lifecycle.py  test_proxy_manager_pipeline.py  test_qa_round3.py  test_relevance_gate.py  test_server_tools.py  test_sqlite_init_cleanup.py  test_sqlite_tuning.py  test_stm_remaining.py  test_surfacing_engine.py
tests/bench/: llm_judge.py  test_bench_qa_determinism.py  test_bench_qa_fallback.py  test_bench_qa_llm_judge.py  test_bench_qa_meta.py  test_bench_qa_scenarios.py
tests/bench/bench_qa/: __init__.py  llm_judge_adapter.py  loader.py  report.py  runner.py  schema.py
tests/bench/fixtures/: s07.json  s09.json
tests/cli/: test_proxy_cli.py
