[project]
name = "memtomem-stm"
version = "0.1.8"
description = "Short-term memory proxy gateway with proactive memory surfacing for AI agents"
authors = [
    {name = "DAPADA Inc.", email = "contact@dapada.co.kr"},
    {name = "memtomem contributors"},
]
license = {text = "Apache-2.0"}
keywords = ["memory", "ai", "mcp", "proxy", "gateway", "agent", "caching", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "click>=8.1",
]

[project.optional-dependencies]
langfuse = ["langfuse>=4.0"]
langchain = [
    "langchain>=1.0",
    "langchain-mcp-adapters>=0.1",
    "langchain-anthropic>=0.3",
]

[project.scripts]
memtomem-stm = "memtomem_stm.server:main"
memtomem-stm-proxy = "memtomem_stm.cli.proxy:cli"
mms = "memtomem_stm.cli.proxy:cli"

[project.urls]
Homepage = "https://github.com/memtomem/memtomem-stm"
Repository = "https://github.com/memtomem/memtomem-stm"
Issues = "https://github.com/memtomem/memtomem-stm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memtomem_stm"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "nbclient>=0.10",
    "nbmake>=1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "ollama: requires a running Ollama instance (auto-skipped when unavailable)",
    "bench_qa: end-to-end compression/surfacing regression gate (fake upstream, deterministic)",
    "bench_qa_meta: self-test probes for bench_qa — intentional failures, NOT CI-safe",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["has-type", "attr-defined"]
